@@ -7,7 +7,6 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertAll;
@@ -49,15 +48,15 @@ class IntMutableListTest {
 
     @Test
     void testAddAtIndex() {
-        IntMutableList list = IntMutableList.of(1, 2, 5);
+        final var list = IntMutableList.of(1, 2, 5);
         list.add(list.size(), 3);
-        List<Integer> refList = new ArrayList<>(Arrays.asList(1, 2, 5));
+        final List<Integer> refList = new ArrayList<>(List.of(1, 2, 5));
         refList.add(refList.size(), 3);
 
         System.out.println("list = " + list);
         assertAll(
                 () -> assertEquals(IntMutableList.of(1, 2, 5, 3), list),
-                () -> assertEquals(Arrays.asList(1, 2, 5, 3), refList)
+                () -> assertEquals(List.of(1, 2, 5, 3), refList)
         );
     }
 
